--- a/wordpress/.lando.yml
+++ b/wordpress/.lando.yml
@@ -5,3 +5,28 @@ config:
   via: apache:2.4.38
   php: '8.1'
   database: mariadb:10.4
+
+services:
+  adminer:
+    type: compose
+    services:
+      image: adminer:4-standalone
+      command: php -S [::]:8080 -t /var/www/html
+    ports:
+      - '8080'
+    moreHttpPorts:
+      - '8080'
+    ssl: true
+    sslExpose: false
+  mailhog:
+    type: mailhog
+    portforward: true
+    hogfrom:
+      - appserver
+    ssl: true
+    sslExpose: false
+proxy:
+  adminer:
+    - adminer-wordpress.lndo.site:8080
+  mailhog:
+    - mailhog-wordpress.lndo.site
